# RealEngine

./: .gitignore  export.py
RealEngine/: CMakeLists.txt  ShaderSource.h  Texture2D.cpp  Texture2D.h  VertexData.h  main.cpp
RealEngine/data/images/: cube1.ret  dragon.ret
RealEngine/data/material/: cube.mat  cube1.mat  dragon.mat  font.mat  ui_text.mat
RealEngine/data/model/: cube1.mesh  dragon.mesh
RealEngine/data/shader/: font.fs  font.vs  unlit.vs
RealEngine/depends/rttr/: CMakeLists.txt  constructor.cpp  constructor.h  method.cpp  method.h  property.cpp  property.h  registration.h  rttr.cmake  rttr_enable.h  type.cpp  type.h  variant.h  variant_sequential_view.h
RealEngine/depends/rttr/detail/base/: core_prerequisites.h  version.h
RealEngine/depends/rttr/detail/constructor/: constructor_wrapper.h  constructor_wrapper_base.cpp  constructor_wrapper_base.h  constructor_wrapper_defaults.h
RealEngine/depends/rttr/detail/impl/: rttr_cast_impl.h  sequential_mapper_impl.h  wrapper_mapper_impl.h
RealEngine/depends/rttr/detail/method/: method_wrapper.h  method_wrapper_base.cpp  method_wrapper_base.h
RealEngine/depends/rttr/detail/misc/: misc_type_traits.h  register_wrapper_mapper_conversion.h  std_type_traits.h  template_type_trait_impl.h  utility.h
RealEngine/depends/rttr/detail/property/: property_accessor.h  property_wrapper.h  property_wrapper_base.cpp  property_wrapper_base.h  property_wrapper_func.h  property_wrapper_member_func.h  property_wrapper_member_object.h  property_wrapper_object.h
RealEngine/depends/rttr/detail/registration/: bind_impl.h  registration_impl.h
RealEngine/depends/rttr/detail/type/: base_classes.h  type_data.cpp  type_data.h  type_register.cpp  type_register.h  type_register_p.h
RealEngine/depends/rttr/detail/variant/: variant_data_policy.h
RealEngine/include/glad/: glad.h
RealEngine/project/: World.cpp  World.h  main.cpp
RealEngine/source/: main.cpp
RealEngine/source/Core/: Global.h  MathLibrary.h  Reflection.h
RealEngine/source/Core/Collections/: Array.cpp  Array.h  Map.h
RealEngine/source/Core/Input/: Input.cpp  Input.h  KeyCode.h
RealEngine/source/Core/Object/: Actor.cpp  Actor.h  Button.cpp  Button.h  CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  Image.cpp  Image.h  Mask.cpp  Mask.h  MeshComponent.cpp  MeshComponent.h  MovableComponent.cpp  MovableComponent.h  Object.cpp  Object.h  Text.cpp  Text.h  TransformComponent.cpp  TransformComponent.h  Widget.cpp  Widget.h
RealEngine/source/application/: Application.cpp  Application.h  Screen.cpp  Screen.h
RealEngine/source/renderer/: Font.cpp  Font.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
RealEngine/source/utils/: RenderDoc.cpp  RenderDoc.h  Utils.cpp  Utils.h
RealEngine/src/: glad.c  glext.h
data/material/: cube.mat
data/shader/: unlit.fs
